force-app/main/default/objects/Gifts_And_Entertainment__c/Gifts_And_Entertainment__c.object-meta.xml
<CustomObject>
    <label>Gifts and Entertainment</label>
    <nameField>
        <displayFormat>GE-{00000}</displayFormat>
        <label>G&amp;E Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts and Entertainment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>