force-app/main/default/objects/Gifts_And_Entertainment__c/fields/Date_of_Gift__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gift__c</fullName>
    <description>The actual date upon which the control of a gift is no longer in the hands of the giver of that gift and is now in the hands of the receiver.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>