force-app/main/default/objects/Gifts_And_Entertainment__c/fields/Given_Received__c.field-meta.xml
<CustomField>
    <fullName>Given_Received__c</fullName>
    <label>Given / Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>