force-app/main/default/objects/Gifts_And_Entertainment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason for G&amp;E</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>