force-app/main/default/objects/Gifts_And_Entertainment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre_Approval</fullName>
                <label>Pre Approval</label>
            </value>
            <value>
                <fullName>Notification_of_Past_Event</fullName>
                <label>Notification of Past Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>