force-app/main/default/objects/Gifts_And_Entertainment__c/fields/Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>Value_Cost__c</fullName>
    <label>Value / Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>